Added support for git branch name enforcement

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,8 @@
     <lombok.version>1.18.2</lombok.version>
     <findsecbugs-plugin.version>1.8.0</findsecbugs-plugin.version>
     <lighthouse-keystore.version>1.0.20</lighthouse-keystore.version>
+    <git.enforceBranchNames>true</git.enforceBranchNames>
+    <git.allowedBranchNames><![CDATA[^(master|release/.*|PR-[0-9]+|.*/API-[0-9]+-.*)$]]></git.allowedBranchNames>
   </properties>
   <modules>
     <module>service-starter</module>
@@ -77,6 +79,24 @@
         <configuration>
           <verbose>false</verbose>
         </configuration>
+        <executions>
+          <execution>
+            <id>check-branch-names</id>
+            <goals>
+              <goal>validateRevision</goal>
+            </goals>
+            <configuration>
+              <validationProperties>
+                <validationProperty>
+                  <name>Git branch name</name>
+                  <value>${git.branch}</value>
+                  <shouldMatchTo>${git.allowedBranchNames}</shouldMatchTo>
+                </validationProperty>
+              </validationProperties>
+              <validationShouldFailIfNoMatch>${git.enforceBranchNames}</validationShouldFailIfNoMatch>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
       <!-- Maven Enforcer rules that apply to all projects. -->
       <plugin>
