--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <!-- Git information and branch name checks -->
     <plugins>
       <plugin>
         <groupId>pl.project13.maven</groupId>
@@ -166,6 +167,25 @@
               <goal>xml-format</goal>
             </goals>
             <phase>process-sources</phase>
+          </execution>
+        </executions>
+      </plugin>
+      <!-- JSON formatting -->
+      <plugin>
+        <groupId>net.revelc.code.formatter</groupId>
+        <artifactId>formatter-maven-plugin</artifactId>
+        <version>2.7.5</version>
+        <configuration>
+          <encoding>UTF-8</encoding>
+          <lineEnding>LF</lineEnding>
+          <skipJavaFormatting>true</skipJavaFormatting>
+          <skipXmlFormatting>true</skipXmlFormatting>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>format</goal>
+            </goals>
           </execution>
         </executions>
       </plugin>
