--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,25 @@
           </execution>
         </executions>
       </plugin>
+      <!-- Force unix line endings -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>fix-line-endings</id>
+            <phase>process-sources</phase>
+            <configuration>
+              <target>
+                <fixcrlf srcDir="${project.basedir}" includes="pom.xml,*.md,src/**" eol="lf" eof="remove"/>
+              </target>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
       <!-- Spotbugs -->
       <plugin>
         <groupId>com.github.spotbugs</groupId>
