--- a/ids/pom.xml
+++ b/ids/pom.xml
@@ -11,6 +11,7 @@
   <packaging>jar</packaging>
   <properties>
     <mysql-connector-java.version>6.0.6</mysql-connector-java.version>
+    <jacoco.coverage>0.93</jacoco.coverage>
   </properties>
   <dependencies>
     <dependency>
