- New auto-config module that can be used to consolidate support classes that are common across services - Refactored the JacksonConfig provider in `ids` to be an auto-config module to be re-used across other apps. - Added automatic support for Lombok builders to JacksonConfig, @Value @Builder type classes no longer need to specify Jackson annotations

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
   </properties>
   <modules>
     <module>service-starter</module>
+    <module>service-auto-config</module>
     <module>ids-api</module>
     <module>ids</module>
     <!--
@@ -309,7 +310,7 @@
             <configuration>
               <scripts>
                 <!--
-                  This blog of weirdness looks for the JaCoCo report and prints a small summary of line coverage.
+                  This blob of weirdness looks for the JaCoCo report and prints a small summary of line coverage.
                 -->
                 <!-- @formatter:off -->
                 <!--suppress MavenModelInspection -->
