--- a/ids/pom.xml
+++ b/ids/pom.xml
@@ -15,6 +15,10 @@
   </properties>
   <dependencies>
     <dependency>
+      <groupId>gov.va.api.health</groupId>
+      <artifactId>service-auto-config</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
