Moved docker build into service starter and disabled push until we get a registry

--- a/service-starter/pom.xml
+++ b/service-starter/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>gov.va.api.health</groupId>
@@ -69,4 +71,63 @@
       </plugin>
     </plugins>
   </build>
+  <profiles>
+    <profile>
+      <id>docker</id>
+      <activation>
+        <file>
+          <exists>src/main/resources/application.properties</exists>
+        </file>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>io.fabric8</groupId>
+            <artifactId>docker-maven-plugin</artifactId>
+            <version>${docker-maven-plugin.version}</version>
+            <configuration>
+              <images>
+                <image>
+                  <name>${docker.organization}/${project.artifactId}</name>
+                  <build>
+                    <from>${docker.baseImage}:${docker.baseVersion}</from>
+                    <assembly>
+                      <targetDir>/tmp</targetDir>
+                      <inline>
+                        <files>
+                          <file>
+                            <source>target/${project.build.finalName}.jar</source>
+                          </file>
+                        </files>
+                      </inline>
+                    </assembly>
+                    <env>
+                      <AWS_APP_NAME>${project.build.finalName}</AWS_APP_NAME>
+                    </env>
+                    <runCmds>
+                      <run>mkdir -p /opt/va</run>
+                      <run>mv /tmp/${project.build.finalName}.jar /opt/va</run>
+                    </runCmds>
+                    <tags>
+                      <tag>${project.version}</tag>
+                      <tag>${docker.tag}</tag>
+                    </tags>
+                  </build>
+                </image>
+              </images>
+            </configuration>
+            <executions>
+              <execution>
+                <id>build</id>
+                <phase>deploy</phase>
+                <goals>
+                  <goal>build</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
