Added support for running ID service completely locally with an ephemeral H2 database.

--- a/service-starter/pom.xml
+++ b/service-starter/pom.xml
@@ -8,6 +8,9 @@
   </parent>
   <artifactId>service-starter</artifactId>
   <packaging>pom</packaging>
+  <properties>
+    <h2.version>1.4.197</h2.version>
+  </properties>
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -22,6 +25,12 @@
       <groupId>gov.va.dvp</groupId>
       <artifactId>lighthouse-keystore</artifactId>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>${h2.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -63,6 +72,18 @@
             <configuration>
               <outputDirectory>${project.build.directory}/certs</outputDirectory>
               <includeArtifactIds>lighthouse-keystore</includeArtifactIds>
+            </configuration>
+          </execution>
+          <execution>
+            <id>copy-h2</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.build.directory}</outputDirectory>
+              <includeArtifactIds>h2</includeArtifactIds>
+              <stripVersion>true</stripVersion>
             </configuration>
           </execution>
         </executions>
