--- a/ids/src/main/resources/application.properties
+++ b/ids/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.url=unset
 spring.datasource.username=unset
 spring.datasource.password=unset
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=none
 logging.stack-trace-filter=java.lang.reflect.Method, org.apache.catalina, org.springframework.aop, org.springframework.security, org.springframework.transaction, org.springframework.web, org.springframework.cglib, org.springframework.validation.beanvalidation, reactor.core, reactor.ipc, sun.reflect, net.sf.cglib, ByCGLIB, io.netty
 logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID: }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx{full,${logging.stack-trace-filter}}}
 logging.level.com.zaxxer.hikari.HikariDataSource=WARN
