Registration support for identity service part 1 - ids/README now describes the behavior of the identity service - ids/run-local.sh now builds before running - new ids/dmeo.sh script to show off a little functionality - Added validation annotations to IDs model - basic registration support for ids, but no error handling
Todo
- validation errors need to be returned as 400.

--- a/ids/src/main/resources/application.properties
+++ b/ids/src/main/resources/application.properties
@@ -16,3 +16,4 @@ management.endpoint.env.enabled=true
 management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
 management.endpoints.web.exposure.include=health,info,env,metrics,prometheus
+uuid.seed=a6c6bfdf-2ebb-5e8a-b69b-696ccd8731d9
