--- a/ids/pom.xml
+++ b/ids/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>gov.va.api.health</groupId>
@@ -11,7 +13,8 @@
   <packaging>jar</packaging>
   <properties>
     <mysql-connector-java.version>6.0.6</mysql-connector-java.version>
-    <jacoco.coverage>0.93</jacoco.coverage>
+    <jacoco.coverage>0.94</jacoco.coverage>
+    <java-uuid-generator.version>3.1.5</java-uuid-generator.version>
   </properties>
   <dependencies>
     <dependency>
@@ -31,6 +34,11 @@
       <groupId>gov.va.api.health</groupId>
       <artifactId>ids-api</artifactId>
       <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.uuid</groupId>
+      <artifactId>java-uuid-generator</artifactId>
+      <version>${java-uuid-generator.version}</version>
     </dependency>
   </dependencies>
   <build>
