--- a/ids-api/pom.xml
+++ b/ids-api/pom.xml
@@ -15,6 +15,16 @@
       <artifactId>lombok</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.swagger.core.v3</groupId>
+      <artifactId>swagger-core</artifactId>
+      <version>2.0.4</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.ws.rs</groupId>
+      <artifactId>javax.ws.rs-api</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+    <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
     </dependency>
@@ -35,6 +45,29 @@
     </dependency>
   </dependencies>
   <build>
-    <plugins/>
+    <plugins>
+      <plugin>
+        <groupId>io.swagger.core.v3</groupId>
+        <artifactId>swagger-maven-plugin</artifactId>
+        <version>2.0.5</version>
+        <configuration>
+          <outputFileName>openapi</outputFileName>
+          <outputPath>${project.build.directory}/swagger</outputPath>
+          <outputFormat>YAML</outputFormat>
+          <resourceClasses>
+            <resourceClass>gov.va.api.health.ids.api.IdentityService</resourceClass>
+          </resourceClasses>
+          <prettyPrint>TRUE</prettyPrint>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>compile</phase>
+            <goals>
+              <goal>resolve</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
 </project>
